added last description for events, modified server ip

--- a/events/balconi-fioriti.html
+++ b/events/balconi-fioriti.html
@@ -59,26 +59,80 @@
 
   <main role="main">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Balconi Fioriti</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Appuntamento dedicato al mondo della natura.
-            Balconi, terrazzi, giardini, vetrine esibiscono una esplosione di colori e di profumi. Fiori dai mille colori,
-            piante e decorazioni impreziosiscono la città donandole un’atmosfera da fiaba.
-            Imperdibile il mercatino floreale in piazza Ganganelli e in piazza L. Marini.</p>
-          <p>
-            <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-          </p>
-        </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-          <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
-          </div>
-          <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
-        </div>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 id="pageTitle" class="jumbotron-heading">Balconi Fioriti</h1>
+        <p id="pageLittleDescription" class="lead text-muted">Appuntamento dedicato al mondo della natura.
+          Balconi, terrazzi, giardini, vetrine esibiscono una esplosione di colori e di profumi. Fiori dai mille colori,
+          piante e decorazioni impreziosiscono la città donandole un’atmosfera da fiaba.
+          Imperdibile il mercatino floreale in piazza Ganganelli e in piazza L. Marini.</p>
+        <p>
+          <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
+        </p>
       </div>
+    </section>
+
+    <section class="p-5">
+      <div id="article">
+        <p>
+          Sabato 15 e domenica 16 Maggio a Santarcangelo torna Balconi Fioriti: un’edizione, quella in programma nel fine settimana, ridotta e rivisitata per il rispetto delle misure anti-Covid e dedicata alla tutela dell’ambiente naturale.
+        </p>
+
+        <p>
+          Il Comune di Santarcangelo, la Fiera e gli organizzatori di Blu Nautilus hanno infatti deciso di aderire alla campagna di Città Slow per la tutela delle api, sentinelle di biodiversità, che svolgono un ruolo importantissimo nell’equilibrio
+          dell’ecosistema e che a causa dell’inquinamento atmosferico, dei pesticidi e degli ambienti urbani rischiano l’estinzione.
+        </p>
+
+        <p>
+          “CittàslowBee, sentinelle della biodiversità”, il titolo della campagna di sensibilizzazione che ha ottenuto anche il patrocinio del Ministero della Transizione Ecologica, si inserisce perfettamente all’interno della rassegna Balconi
+          Fioriti.
+          Piazza Ganganelli ospiterà infatti il tradizionale mercato di florovivaismo con piante in grado di attirare e nutrire le api, arbusti e fiori, succulente, erbe aromatiche, bulbi, sementi e accessori per il giardinaggio. In piazza Marini ci
+          sarà
+          invece il mercato dei produttori agricoli locali a Km0, l'artigianato e l'erboristeria.
+        </p>
+
+        <p>
+          In occasione della due giorni dedicata a piante, fiori e artigianato, l’Ufficio IAT-Pro Loco inaugura la stagione estiva di visite guidate dopo la pausa forzata dovuta alle disposizioni per il contenimento del Coronavirus. L’appuntamento è
+          per
+          sabato 15 e domenica 16 con un tour alla scoperta dei miti e degli angoli più suggestivi della città, tra le leggende della Dama Bianca, della maga Sghetta e del Ribess. Per l’occasione “floreale” ai partecipanti sarà distribuito in omaggio
+          il
+          libro dedicato al “Maestro delle api” Carlo Carlini. I gruppi partiranno dall’ufficio IAT-Pro Loco alle 10 e alle 16. Il costo della visita è di 8 euro a persona e gratuito per i bambini fino a 14 anni. Per partecipare occorre prenotare
+          chiamando
+          il numero 0541/624.270 o scrivendo una mail iat@comune.santarcangelo.rn.it
+        </p>
+
+        <p>
+          Anche l’associazione Noi della Rocca organizza alcune iniziative dedicate a Balconi Fioriti nel corso del fine settimana a partire da un omaggio a Tonino Guerra, con l’allestimento dell’albero a lui dedicato in via Cesare Battisti. Ad
+          omaggiare
+          invece la più classica delle iniziative che contraddistingue da sempre l’appuntamento floreale e che non potrà svolgersi in maniera compiuta neppure quest’anno, sarà lo speciale allestimento di un balcone fiorito nel cuore del centro
+          storico. Con
+          il progetto “Vetrine d’Autore”, infine, l’associazione Noi della Rocca riaccende le luci sulle vetrine spente del centro commerciale naturale attraverso l’installazione di opere pittoriche realizzate per il Concorso dei Balconi fioriti dal
+          gruppo
+          “Santarcangelo dei Pittori” – tra cui un omaggio al pittore recentemente scomparso Aldo Astolfi – e attraverso fotografie a soggetto floreale realizzate da fotografi locali. Sarà possibile ammirare le vetrine d’autore da sabato 15 a
+          domenica 23
+          maggio.
+        </p>
+
+        <p>
+          Per consentire lo svolgimento di Balconi Fioriti, nel fine settimana entreranno in vigore alcune modifiche alla viabilità e alla sosta. Dalle ore 14 di venerdì 14 maggio fino alle 20 di lunedì 17 sono vietati transito e sosta nelle piazze
+          Ganganelli e Molari, mentre dalle ore 7 di sabato 15 maggio alle ore 22 di domenica 16 maggio entra in vigore il divieto di sosta e transito in piazza Marini e nelle vie Ludovido Marini, Giuseppe Verdi (tra le vie Marini e Bruno), Andrea
+          Costa
+          (tra le vie Daniele Felici e Montevecchi) e via Daniele Felici (tra le vie Andrea Costa e Bruno). Per consentire le operazioni di allestimento del mercato, sarà vietato il transito e la sosta nella via di piazza Ganganelli dalle 14 alle 20
+          di
+          venerdì 14 e di lunedì 17 maggio.
+        </p>
+
+      </div>
+    </section>
+
+    <div class="album py-5 bg-light">
+      <div class="container">
+        <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle
+          santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
+        </div>
+        <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
+      </div>
+    </div>
     </div>
   </main>
 
@@ -92,4 +146,5 @@
   </footer>
 
 </body>
+
 </html>
