--- a/events/fiera-san-michele.html
+++ b/events/fiera-san-michele.html
@@ -59,27 +59,49 @@
 
   <main role="main">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 id="pageTitle" class="jumbotron-heading">Fiera di San Michele</h1>
-          <p id="pageLittleDescription" class="lead text-muted">Conosciuta come “Fiera degli uccelli”.
-Appuntamento dedicato al mondo degli animali, della natura e all’ambiente.
-Sono organizzati eventi e mostre a tema. Per i più piccoli e non solo, si svolgono iniziative didattiche, laboratori legati al mondo degli animali e della natura.
-Numerose bancarelle nelle vie del centro esibiscono articoli per il giardinaggio, piante, fiori e prodotti naturali.
-Assolutamente imperdibile la gara canora degli uccelli.</p>
-          <p>
-            <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
-          </p>
-        </div>
-      </section>
-
-      <div class="album p-5 bg-light">
-        <div class="container">
-          <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
-          </div>
-          <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
-        </div>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 id="pageTitle" class="jumbotron-heading">Fiera di San Michele</h1>
+        <p id="pageLittleDescription" class="lead text-muted">Conosciuta come “Fiera degli uccelli”.
+          Appuntamento dedicato al mondo degli animali, della natura e all’ambiente.
+          Sono organizzati eventi e mostre a tema. Per i più piccoli e non solo, si svolgono iniziative didattiche, laboratori legati al mondo degli animali e della natura.
+          Numerose bancarelle nelle vie del centro esibiscono articoli per il giardinaggio, piante, fiori e prodotti naturali.
+          Assolutamente imperdibile la gara canora degli uccelli.</p>
+        <p>
+          <a href="../index.html" class="btn btn-primary my-2">Torna alla home</a>
+        </p>
       </div>
+    </section>
+
+    <section class="p-5">
+      <div id="article">
+        <p>
+          La Fiera di San Michele è la prima delle grandi fiere autunnali che si svolgono a Santarcangelo di Romagna, ed è uno dei tanti appuntamenti a carattere commerciale e culturale. Questa manifestazione è
+          conosciuta come "Fiera degli uccelli" poiché, vi si svolge una singolare competizione, la "Gara canora per uccelli" alla quale partecipano allevatori di richiami vivi.
+        </p>
+
+        <p>
+          I legami con il mondo della caccia sono testimoniati da un editto risalente all'epoca malatestiana in cui si parla della caccia con il falcone e del relativo commercio in tempo di fiera. La fiera di San Michele predilige i temi dedicati
+          alla natura, agli animali e all'ambiente, con mostre ed iniziative dedicate ad essi.
+        </p>
+
+        <p>
+          Tra le cose da comprare: articoli per il giardinaggio in piazza Ganganelli per l’occasione ribattezzata “La piazza verde” e letteralmente ricoperta di piante e fiori, e i prodotti naturali e biologici, in vendita nel “Mercato della salute”
+          che si snoda nel centro del paese.
+        </p>
+
+      </div>
+    </section>
+
+
+    <div class="album p-5 bg-light">
+      <div class="container">
+        <div class="form-group row" id="pageDescription">testo da scaricare perche ci vuole, questo testo sara da cambiare con una descrizione esattamente copia e incollata spudoratamente dal primo link che risulta cercando calici di stelle
+          santarczngelo su google, spero si faccia presto che non ne posso piu, sto diventando buiz
+        </div>
+        <input class="btn btn-primary my-2" type="button" id="btnDownloadArticle" value="download" onclick="downloadArticle(0)">
+      </div>
+    </div>
     </div>
   </main>
 
@@ -93,4 +115,5 @@ Assolutamente imperdibile la gara canora degli uccelli.</p>
   </footer>
 
 </body>
+
 </html>
