--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
 
 <body>
 
+
   <header>
-    <div class="collapse bg-dark" id="navbarHeader">
+    <div class="collapse bg-light" id="navbarHeader">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-white">About</h4>
+            <h4>About</h4>
             <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites
               or contact information.</p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
+            <h4>Contact</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
-              <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
+              <li><a href="https://instagram.com/santarcangelo_di_romagna?utm_medium=copy_link">Instagram</a></li>
+              <li><a href="https://www.facebook.com/TurismoSantarcangelodiRomagnaOfficial/">Facebook</a></li>
+              <li><a href="mailto:turismo@comune.santarcangelo.rn.it">Email</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <div class="navbar box-shadow">
+    <div class="navbar navbar-light bg-light box-shadow">
       <div class="container d-flex justify-content-between">
         <a href="#" class="navbar-brand d-flex align-items-center">
           <img src="img/logo/santarcangeloLogoScritto.jpeg" width="250px" height="90px">
           <strong></strong>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
-
     </div>
   </header>
 
@@ -70,7 +70,7 @@
 
     <section class="jumbotron text-center" id="main-section">
       <div class="container" style="height: 50vh; position: relative;">
-        <h1 class="jumbotron-heading" style="color: #912E36">Tutto Santarcangelo</h1>
+        <h1 class="jumbotron-heading" style="color: #912E36">TuttoSantarcangelo</h1>
         <p class="lead" style="color: #B75054">All'interno di questo sito puoi trovare informazioni relative a Santarcangelo di Romagna e ai suoi numerosi eventi.</p>
         <p style="position: absolute; bottom: 0; width: 96%">
           <a href="#events" class="btn btn-danger my-2">Scopri di più</a>
@@ -90,7 +90,7 @@
                 <img class="card-img-top" src="img/events/caliciSantarcangelo2.png" alt="Card image cap">
               </div>
               <div class="card-body">
-                <p class="card-text"><strong>Calici di stelle</strong>, un appuntamento sotto le stelle di Santarcangelo per poter degustare i migliori vini offerti dalle migliori cantine della zona.</p>
+                <p class="card-text"><strong>Calici di stelle</strong>, un appuntamento sotto le stelle di Santarcangelo per poter degustare i migliori vini offerti dalle cantine della zona.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="w-100 d-flex justify-content-between">
                     <button type="button" onclick="goToArticle(0)" class="btn btn-sm btn-outline-secondary">Leggi</button>
