modified first phrase in index and removed useless script

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="jumbotron text-center" id="main-section">
       <div class="container" style="height: 50vh; position: relative;">
         <h1 class="jumbotron-heading" style="color: #912E36">TuttoSantarcangelo</h1>
-        <p class="lead" style="color: #B75054">All'interno di questo sito puoi trovare informazioni relative a Santarcangelo di Romagna e ai suoi numerosi eventi.</p>
+        <p class="lead" style="color: #B75054">All'interno di questo sito puoi trovare informazioni relative ai numerosi eventi di Santarcangelo di Romagna.</p>
         <p style="position: absolute; bottom: 0; width: 96%">
           <a href="#events" class="btn btn-danger my-2">Scopri di più</a>
           <a href="contact.html" class="btn btn-secondary my-2">Contattaci</a>
@@ -185,15 +185,5 @@
   </footer>
 
 </body>
-
-<script type="text/javascript">
-  function scrollToAnchor(aid) {
-    var aTag = $("a[name='" + aid + "']");
-    console.log(aTag);
-    $('html,body').animate({
-      scrollTop: aTag.offset().top
-    }, 'slow');
-  }
-</script>
 
 </html>
